# ragnaforge

./: .env.example  .env.gpu  .gitignore  DATA_RESET_README.md  DOCUMENT_CONVERSION_SETUP.md  Dockerfile  GPU_TEST_GUIDE.md  Introduce.md  LICENSE  MANIFEST.in  Makefile  PERFORMANCE_REPORT.md  QUICK_TEST_CHECKLIST.md  README.md  TODO.md  UI_README.md  config.py  docker-compose.yml  embedding_similarity_test_results.json  main.py  main_backup.py  main_old.py  model_manager.py  models.py  pyproject.toml  requirements.txt  requirements_streamlit.txt  reset_all_data.py  reset_data_simple.sh  result_auto.json  result_docling.json  result_marker.json  run_tests.py  run_ui.sh  setup.py  setup_gpu_server.sh  simple_search_test.sh  start_streamlit.sh  streamlit_app.py  streamlit_simple.py  (+18 more)
docs/: doclin_onGPU.txt  docling.txt  docling_multiformat.txt  document-conversion-guide.md  테스트결과.txt
routers/: admin.py  auth.py  convert.py  embeddings.py  files.py  rerank.py  search.py
sample_docs/: P02_01_01_001_20210101_marker.md  기업 문서 검색 도구 분석.md
scripts/: test_client.py
services/: __init__.py  chunking_service.py  database_service.py  docling_service.py  document_conversion_service.py  document_processing_service.py  embedding_service.py  file_upload_service.py  marker_service.py  monitoring_service.py  qdrant_service.py  rerank_service.py  search_factory.py  search_service.py  storage_service.py  unified_search_service.py
services/interfaces/: __init__.py  text_search_interface.py  vector_search_interface.py
services/rerank/: __init__.py  bge_reranker.py  rerank_factory.py  rerank_interface.py
services/text_backends/: __init__.py  meilisearch_backend.py
services/vector_backends/: __init__.py  qdrant_backend.py
test_output/html/: tmpqsqgzaz_.html
test_output/json/: tmpqsqgzaz_.json
test_output/markdown/: tmpqsqgzaz_.md
tests/: README.md  __init__.py  test_complete_document_processing.py  test_complex_embedding_similarity.py  test_concurrent_embedding_markdown.py  test_docling_only.py  test_document_conversion_comparison.py  test_embedding_performance_comparison.py  test_env_chunking.py  test_env_chunking_partial.py  test_gpu_performance.py  test_gpu_vs_cpu_comparison.py  test_integration_full_workflow.py  test_integration_simple.py  test_kure_batch_size_optimization.py  test_model_comparison.py  test_openai_vs_kure_real_document.py  test_performance_stress.py  test_real_api.py  test_real_api_conversion.py  test_real_document_conversion.py  test_real_openai_client.py  test_report.md  test_rerank_service.py  test_sample_chunking.py  test_search_with_rerank.py  test_simple_document_conversion.py  test_unified_search_architecture.py  test_unified_search_performance.py
tests/archived/: README.md  test_batch_size_optimization.py  test_new_defaults.py  test_pdf_50_pages_simulation.py  test_performance_comparison.py  test_real_document_performance.py
utils/: openai_errors.py  token_utils.py
